[package]
name = "buttuh-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
byteorder = "1.5.0"
bincode = "1.3.3"
simdnbt = "0.2.1"
buttuh-io = { path = "../buttuh-io" }
buttuh-connection = { path = "../buttuh-connection" }