[package]
name = "buttuh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
buttuh-protocol = { path = "../buttuh-protocol" }
buttuh-connection = { path = "../buttuh-connection" }
buttuh-io = { path = "../buttuh-io" }
tokio = { version = "1.12.0", features = ["full"] }

[[bin]]
name = "buttuh"
path = "src/main.rs"
